Update navigation link styles for improved visibility

--- a/ticket.html
+++ b/ticket.html
@@ -48,9 +48,9 @@
             <i class="bi bi-list text-2xl"></i>
         </button>
         <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-            <a href="index.html" class="nav-link font-semibold text-orange-400">Home</a>
+            <a href="index.html" class="nav-link font-semibold">Home</a>
             <a href="about.html" class="nav-link font-semibold">About</a>
-            <a href="ticket.html" class="nav-link font-semibold">Get Ticket</a>
+            <a href="ticket.html" class="nav-link font-semibold text-orange-400">Get Ticket</a>
             <a href="#" class="nav-link font-semibold">Schedule</a>
         </nav>
     </div>
