Fix ticket title and update form description for clarity

--- a/ticket.html
+++ b/ticket.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Your Ticket - INSPIRA 2025</title>
+    <title>Get Your Ticket-INSPIRA 2025</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -60,8 +60,8 @@
         
         <div id="form-container" class="w-full max-w-lg mx-auto">
             <div class="bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg">
-                <h2 class="text-3xl font-bold text-center mb-2">Get Your Event Ticket</h2>
-                <p class="text-center text-gray-300 mb-6">Enter your details to generate your entry pass.</p>
+                <h2 class="text-3xl font-bold text-center mb-2">Get Your Ticket</h2>
+                <p class="text-center text-gray-300 mb-6">Enter your details to generate your ticket.</p>
                 <form id="ticket-form" class="space-y-6">
                     <div>
                         <label for="regNumber" class="block mb-2 text-sm font-medium text-gray-200">Registration Number</label>
