--- a/ticket.html
+++ b/ticket.html
@@ -22,7 +22,7 @@
             animation: waveFlag 10s ease infinite;
         }
         @keyframes waveFlag { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-        .site-header { margin: 1%; border-radius: 2rem; position: fixed; top: 0; left: 0; width: 98%; z-index: 1000; background-color: rgba(84, 28, 28, 0.5); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
+
         .nav-link { position: relative; transition: color 0.3s ease; }
         .nav-link:hover { color: #F28C1A; }
         .nav-link::after { content: ''; position: absolute; width: 0; height: 2px; display: block; margin-top: 5px; right: 0; background: #F28C1A; transition: width 0.3s ease; }
@@ -38,23 +38,39 @@
 
 <body class="animated-gradient text-white">
 
-    <header class="site-header">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html" class="flex items-center gap-3">
-            <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
-            <span class="font-bold text-xl hidden sm:block">INSPIRA '25</span>
-        </a>
-        <button id="nav-toggle" class="sm:hidden text-white focus:outline-none">
-            <i class="bi bi-list text-2xl"></i>
-        </button>
-        <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-            <a href="index.html" class="nav-link font-semibold">Home</a>
-            <a href="about.html" class="nav-link font-semibold">About</a>
-            <a href="ticket.html" class="nav-link font-semibold text-orange-400">Get Ticket</a>
-            <a href="#" class="nav-link font-semibold">Schedule</a>
+    <header class="fixed top-2 sm:top-4 left-1/2 -translate-x-1/2 w-[96%] max-w-7xl rounded-2xl z-50 bg-[#541C1C]/60 backdrop-blur-lg border border-white/10">
+        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <a href="index.html" class="flex items-center gap-3">
+                <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+                <span class="font-bold text-xl hidden sm:block text-white">INSPIRA '25</span>
+            </a>
+
+            <button id="nav-toggle" class="sm:hidden text-white focus:outline-none">
+                <svg id="hamburger" class="h-8 w-8 block" fill="none" stroke="currentColor" stroke-width="2"
+                    viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+                <svg id="close" class="h-8 w-8 hidden" fill="none" stroke="currentColor" stroke-width="2"
+                    viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+
+            <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
+                <a href="index.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Home</a>
+                <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
+                <a href="ticket.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Get Ticket</a>
+                <a href="#" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+            </nav>
+        </div>
+
+        <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
+            <a href="index.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Home</a>
+            <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
+            <a href="ticket.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Get Ticket</a>
+            <a href="#" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
-    </div>
-</header>
+    </header>
 
     <main id="page-content" class="min-h-screen w-full flex flex-col items-center justify-center p-4 sm:p-6 lg:p-8">
         
@@ -150,17 +166,16 @@
     </footer>
     
 <script>
-    // Toggle mobile menu
-    const navToggle = document.getElementById('nav-toggle');
-    const navMenu = document.getElementById('nav-menu');
-    navToggle.addEventListener('click', () => {
-        navMenu.classList.toggle('hidden');
-        navMenu.classList.toggle('flex');
-        navMenu.classList.toggle('flex-col');
-        navMenu.classList.toggle('space-y-4');
-        navMenu.classList.toggle('space-x-0');
-        navMenu.classList.toggle('mt-4');
-    });
+  const toggleButton = document.getElementById('nav-toggle');
+  const mobileMenu = document.getElementById('nav-menu-mobile');
+  const hamburgerIcon = document.getElementById('hamburger');
+  const closeIcon = document.getElementById('close');
+
+  toggleButton.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+    hamburgerIcon.classList.toggle('hidden');
+    closeIcon.classList.toggle('hidden');
+  });
 </script>
 
 <script>
