edit committee members

--- a/members.html
+++ b/members.html
@@ -466,9 +466,9 @@
                     <!-- member 14 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASB_2024_116 - Krishnamoorthi Krishani.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
+                                <h5>Krishnamoorthi <br> Krishani</h5>
                                 <p class="text-primary mb-1">Vice President</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
@@ -481,9 +481,9 @@
                     <!-- member 15 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASB_2024_056 - Sulani Nawodya.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
+                                <h5>Sulani <br>Nawodya</h5>
                                 <p class="text-primary mb-1">Vice President</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
@@ -496,6 +496,68 @@
                     <!-- member 16 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
+                            <img src="assets\img\Org\ASB_2024_005 - Isuri Amanda.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <div class="p-4">
+                                <h5>Isuri <br>Amanda</h5>
+                                <p class="text-primary mb-1">Vice President</p>
+                                <div class="d-flex">
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <!-- member 12 -->
+                    <div class="col-md-6 col-lg-2">
+                        <div class="speaker-card ">
+                            <img src="assets\img\Org\ASB_2024_063 - Dilmini Anjalika.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <div class="p-4">
+                                <h5>Dilmini <br> Anjalika</h5>
+                                <p class="text-primary mb-1">Drama Coordinator</p>
+                                <div class="d-flex">
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- member 13 -->
+                    <div class="col-md-6 col-lg-2">
+                        <div class="speaker-card ">
+                            <img src="assets\img\Org\ASB_2024_100 - Chathunika Jayamini.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <div class="p-4">
+                                <h5>Chathunika <br>Jayamini</h5>
+                                <p class="text-primary mb-1">Speaking & Announcing Coordinator</p>
+                                <div class="d-flex">
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- member 14 -->
+                    <div class="col-md-6 col-lg-2">
+                        <div class="speaker-card ">
+                            <img src="assets\img\Org\HPT_2024_058 - Akindu Thisen.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <div class="p-4">
+                                <h5>Akindu <br> Thisen</h5>
+                                <p class="text-primary mb-1">Vice President</p>
+                                <div class="d-flex">
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- member 15 -->
+                    <!-- <div class="col-md-6 col-lg-2">
+                        <div class="speaker-card ">
                             <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>David Kim</h5>
@@ -507,7 +569,22 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+                    <!-- member 16 -->
+                    <!-- <div class="col-md-6 col-lg-2">
+                        <div class="speaker-card ">
+                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <div class="p-4">
+                                <h5>David Kim</h5>
+                                <p class="text-primary mb-1">Vice President</p>
+                                <div class="d-flex">
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
             
