edit member  titles

--- a/members.html
+++ b/members.html
@@ -454,7 +454,7 @@
                             <img src="assets\img\Org\ASB_2024_093 - Gayangi Kaveesha.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Gayangi <br> Kaveesha</h5>
-                                <p class="text-primary mb-1">Speaking & Announcing Coordinator</p>
+                                <p class="text-primary mb-1">Announcing Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -469,7 +469,7 @@
                             <img src="assets\img\Org\ASB_2024_116 - Krishnamoorthi Krishani.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Krishnamoorthi <br> Krishani</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -484,7 +484,7 @@
                             <img src="assets\img\Org\ASB_2024_056 - Sulani Nawodya.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Sulani <br>Nawodya</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -499,7 +499,7 @@
                             <img src="assets\img\Org\ASB_2024_005 - Isuri Amanda.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Isuri <br>Amanda</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -516,7 +516,7 @@
                             <img src="assets\img\Org\ASB_2024_063 - Dilmini Anjalika.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Dilmini <br> Anjalika</h5>
-                                <p class="text-primary mb-1">Drama Coordinator</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -531,7 +531,7 @@
                             <img src="assets\img\Org\ASB_2024_100 - Chathunika Jayamini.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Chathunika <br>Jayamini</h5>
-                                <p class="text-primary mb-1">Speaking & Announcing Coordinator</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -546,7 +546,7 @@
                             <img src="assets\img\Org\HPT_2024_058 - Akindu Thisen.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>Akindu <br> Thisen</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <p class="text-primary mb-1">Commitee Member</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
